--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
         "vue": "^3.2.41"
+    },
+    "dependencies": {
+        "dropzone": "^6.0.0-beta.2",
+        "pinia": "^2.1.3",
+        "pinia-plugin-persistedstate": "^3.1.0",
+        "vue-material-design-icons": "^5.2.0"
     }
 }
